# MiniRAN

./: .clang-format  CMakeLists.txt  README.md
brief/: MiniRAN_ProtoLab_Specyfikacja_Techniczna.docx  MiniRAN_ProtoLab_Tresc_Zadania_i_Przewodnik.docx
docs/: ARCHITECTURE_NOTES.md  IMPLEMENTATION_CHECKLIST.md
include/miniran/common/: byte_buffer.h  metrics.h
include/miniran/core/: core_network.h
include/miniran/nodes/: access_node.h  ue.h
include/miniran/protocol/: frame_codec.h  protocol_message.h  session_manager.h
include/miniran/simulation/: scenario_config.h  scenario_runner.h  simulation_result.h
include/miniran/traffic/: traffic_generator.h  traffic_profile.h
include/miniran/transport/: datagram.h  link_profile.h  transport_mode.h  virtual_network.h
scenarios/: tcp_basic.cfg  udp_lossy.cfg
src/: main.cpp
src/common/: byte_buffer.cpp  metrics.cpp
src/core/: core_network.cpp
src/nodes/: access_node.cpp  ue.cpp
src/protocol/: frame_codec.cpp  session_manager.cpp
src/simulation/: scenario_config.cpp  scenario_runner.cpp  simulation_result.cpp
src/traffic/: traffic_generator.cpp
src/transport/: virtual_network.cpp
tests/: test_main.cpp
tests/component/: test_attach_detach.cpp  test_tcp_traffic.cpp  test_udp_higher_loss.cpp  test_udp_low_bandwidth_limits_throughput.cpp  test_udp_stability.cpp
tests/support/: test_framework.h
tests/unit/: test_data_after_detach.cpp  test_data_after_session_expiration.cpp  test_data_with_wrong_session_id.cpp  test_detach_after_session_expiration.cpp  test_detach_in_invalid_states.cpp  test_duplicate_attach_request.cpp  test_frame_codec.cpp  test_link_profile.cpp  test_reattach_after_released.cpp  test_session_manager.cpp  test_traffic_generator.cpp  test_virtual_network.cpp
